--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,6 +17,7 @@
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data.dataloader import DataLoader\n",
     "from mingpt.utils import set_seed\n",
+    "\n",
     "set_seed(3407)"
    ]
   },
@@ -28,8 +29,9 @@
    "source": [
     "import pickle\n",
     "\n",
+    "\n",
     "class SortDataset(Dataset):\n",
-    "    \"\"\" \n",
+    "    \"\"\"\n",
     "    Dataset for the Sort problem. E.g. for problem length 6:\n",
     "    Input: 0 0 2 1 0 1 -> Output: 0 0 0 1 1 2\n",
     "    Which will feed into the transformer concatenated as:\n",
@@ -39,30 +41,30 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, split, length=6, num_digits=3):\n",
-    "        assert split in {'train', 'test'}\n",
+    "        assert split in {\"train\", \"test\"}\n",
     "        self.split = split\n",
     "        self.length = length\n",
     "        self.num_digits = num_digits\n",
-    "    \n",
+    "\n",
     "    def __len__(self):\n",
-    "        return 10000 # ...\n",
-    "    \n",
+    "        return 10000  # ...\n",
+    "\n",
     "    def get_vocab_size(self):\n",
     "        return self.num_digits\n",
-    "    \n",
+    "\n",
     "    def get_block_size(self):\n",
-    "        # the length of the sequence that will feed into transformer, \n",
+    "        # the length of the sequence that will feed into transformer,\n",
     "        # containing concatenated input and the output, but -1 because\n",
     "        # the transformer starts making predictions at the last input element\n",
     "        return self.length * 2 - 1\n",
     "\n",
     "    def __getitem__(self, idx):\n",
-    "        \n",
+    "\n",
     "        # use rejection sampling to generate an input example from the desired split\n",
     "        while True:\n",
     "            # generate some random integers\n",
     "            inp = torch.randint(self.num_digits, size=(self.length,), dtype=torch.long)\n",
-    "            # half of the time let's try to boost the number of examples that \n",
+    "            # half of the time let's try to boost the number of examples that\n",
     "            # have a large number of repeats, as this is what the model seems to struggle\n",
     "            # with later in training, and they are kind of rate\n",
     "            if torch.rand(1).item() < 0.5:\n",
@@ -71,10 +73,12 @@
     "                    continue\n",
     "            # figure out if this generated example is train or test based on its hash\n",
     "            h = hash(pickle.dumps(inp.tolist()))\n",
-    "            inp_split = 'test' if h % 4 == 0 else 'train' # designate 25% of examples as test\n",
+    "            inp_split = (\n",
+    "                \"test\" if h % 4 == 0 else \"train\"\n",
+    "            )  # designate 25% of examples as test\n",
     "            if inp_split == self.split:\n",
-    "                break # ok\n",
-    "        \n",
+    "                break  # ok\n",
+    "\n",
     "        # solve the task: i.e. sort\n",
     "        sol = torch.sort(inp)[0]\n",
     "\n",
@@ -85,8 +89,8 @@
     "        x = cat[:-1].clone()\n",
     "        y = cat[1:].clone()\n",
     "        # we only want to predict at output locations, mask out the loss at the input locations\n",
-    "        y[:self.length-1] = -1\n",
-    "        return x, y\n"
+    "        y[: self.length - 1] = -1\n",
+    "        return x, y"
    ]
   },
   {
@@ -114,11 +118,11 @@
    ],
    "source": [
     "# print an example instance of the dataset\n",
-    "train_dataset = SortDataset('train')\n",
-    "test_dataset = SortDataset('test')\n",
+    "train_dataset = SortDataset(\"train\")\n",
+    "test_dataset = SortDataset(\"test\")\n",
     "x, y = train_dataset[0]\n",
-    "for a, b in zip(x,y):\n",
-    "    print(int(a),int(b))"
+    "for a, b in zip(x, y):\n",
+    "    print(int(a), int(b))"
    ]
   },
   {
@@ -127,10 +131,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "number of parameters: 0.09M\n"
+      "2024-08-15 09:11:58 [    INFO] number of parameters: 0.09M\n"
      ]
     }
    ],
@@ -139,7 +143,7 @@
     "from mingpt.model import GPT\n",
     "\n",
     "model_config = GPT.get_default_config()\n",
-    "model_config.model_type = 'gpt-nano'\n",
+    "model_config.model_type = \"gpt-nano\"\n",
     "model_config.vocab_size = train_dataset.get_vocab_size()\n",
     "model_config.block_size = train_dataset.get_block_size()\n",
     "model = GPT(model_config)"
@@ -151,10 +155,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "running on device cuda\n"
+      "2024-08-15 09:12:01 [    INFO] running on device mps\n"
      ]
     }
    ],
@@ -163,7 +167,9 @@
     "from mingpt.trainer import Trainer\n",
     "\n",
     "train_config = Trainer.get_default_config()\n",
-    "train_config.learning_rate = 5e-4 # the model we're using is so small that we can go a bit faster\n",
+    "train_config.learning_rate = (\n",
+    "    5e-4  # the model we're using is so small that we can go a bit faster\n",
+    ")\n",
     "train_config.max_iters = 2000\n",
     "train_config.num_workers = 0\n",
     "trainer = Trainer(train_config, model, train_dataset)"
@@ -178,34 +184,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter_dt 0.00ms; iter 0: train loss 1.06407\n",
-      "iter_dt 18.17ms; iter 100: train loss 0.14712\n",
-      "iter_dt 18.70ms; iter 200: train loss 0.05315\n",
-      "iter_dt 19.65ms; iter 300: train loss 0.04404\n",
-      "iter_dt 31.64ms; iter 400: train loss 0.04724\n",
-      "iter_dt 18.43ms; iter 500: train loss 0.02521\n",
-      "iter_dt 19.83ms; iter 600: train loss 0.03352\n",
-      "iter_dt 19.58ms; iter 700: train loss 0.00539\n",
-      "iter_dt 18.72ms; iter 800: train loss 0.02057\n",
-      "iter_dt 18.26ms; iter 900: train loss 0.00360\n",
-      "iter_dt 18.50ms; iter 1000: train loss 0.00788\n",
-      "iter_dt 20.64ms; iter 1100: train loss 0.01162\n",
-      "iter_dt 18.63ms; iter 1200: train loss 0.00963\n",
-      "iter_dt 18.32ms; iter 1300: train loss 0.02066\n",
-      "iter_dt 18.40ms; iter 1400: train loss 0.01739\n",
-      "iter_dt 18.37ms; iter 1500: train loss 0.00376\n",
-      "iter_dt 18.67ms; iter 1600: train loss 0.00133\n",
-      "iter_dt 18.38ms; iter 1700: train loss 0.00179\n",
-      "iter_dt 18.66ms; iter 1800: train loss 0.00079\n",
-      "iter_dt 18.48ms; iter 1900: train loss 0.00042\n"
+      "iter_dt 0.00ms; iter 0: train loss 1.05909\n",
+      "iter_dt 27.26ms; iter 100: train loss 0.13728\n",
+      "iter_dt 27.53ms; iter 200: train loss 0.04155\n",
+      "iter_dt 52.22ms; iter 300: train loss 0.06876\n",
+      "iter_dt 27.75ms; iter 400: train loss 0.05235\n",
+      "iter_dt 26.62ms; iter 500: train loss 0.04428\n",
+      "iter_dt 27.50ms; iter 600: train loss 0.01983\n",
+      "iter_dt 27.19ms; iter 700: train loss 0.02229\n",
+      "iter_dt 28.59ms; iter 800: train loss 0.00880\n",
+      "iter_dt 26.68ms; iter 900: train loss 0.01874\n",
+      "iter_dt 27.57ms; iter 1000: train loss 0.02065\n",
+      "iter_dt 27.09ms; iter 1100: train loss 0.00210\n",
+      "iter_dt 27.57ms; iter 1200: train loss 0.00369\n",
+      "iter_dt 27.17ms; iter 1300: train loss 0.01281\n",
+      "iter_dt 26.59ms; iter 1400: train loss 0.00110\n",
+      "iter_dt 25.94ms; iter 1500: train loss 0.00087\n",
+      "iter_dt 27.88ms; iter 1600: train loss 0.03301\n",
+      "iter_dt 27.34ms; iter 1700: train loss 0.00297\n",
+      "iter_dt 27.63ms; iter 1800: train loss 0.01757\n",
+      "iter_dt 26.89ms; iter 1900: train loss 0.00313\n"
      ]
     }
    ],
    "source": [
     "def batch_end_callback(trainer):\n",
     "    if trainer.iter_num % 100 == 0:\n",
-    "        print(f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f}\")\n",
-    "trainer.set_callback('on_batch_end', batch_end_callback)\n",
+    "        print(\n",
+    "            f\"iter_dt {trainer.iter_dt * 1000:.2f}ms; iter {trainer.iter_num}: train loss {trainer.loss.item():.5f}\"\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "trainer.set_callback(\"on_batch_end\", batch_end_callback)\n",
     "\n",
     "trainer.run()"
    ]
@@ -236,8 +246,8 @@
    ],
    "source": [
     "def eval_split(trainer, split, max_batches):\n",
-    "    dataset = {'train':train_dataset, 'test':test_dataset}[split]\n",
-    "    n = train_dataset.length # naugy direct access shrug\n",
+    "    dataset = {\"train\": train_dataset, \"test\": test_dataset}[split]\n",
+    "    n = train_dataset.length  # naugy direct access shrug\n",
     "    results = []\n",
     "    mistakes_printed_already = 0\n",
     "    loader = DataLoader(dataset, batch_size=100, num_workers=0, drop_last=False)\n",
@@ -248,25 +258,38 @@
     "        inp = x[:, :n]\n",
     "        sol = y[:, -n:]\n",
     "        # let the model sample the rest of the sequence\n",
-    "        cat = model.generate(inp, n, do_sample=False) # using greedy argmax, not sampling\n",
-    "        sol_candidate = cat[:, n:] # isolate the filled in sequence\n",
+    "        cat = model.generate(\n",
+    "            inp, n, do_sample=False\n",
+    "        )  # using greedy argmax, not sampling\n",
+    "        sol_candidate = cat[:, n:]  # isolate the filled in sequence\n",
     "        # compare the predicted sequence to the true sequence\n",
-    "        correct = (sol == sol_candidate).all(1).cpu() # Software 1.0 vs. Software 2.0 fight RIGHT on this line haha\n",
+    "        correct = (\n",
+    "            (sol == sol_candidate).all(1).cpu()\n",
+    "        )  # Software 1.0 vs. Software 2.0 fight RIGHT on this line haha\n",
     "        for i in range(x.size(0)):\n",
     "            results.append(int(correct[i]))\n",
-    "            if not correct[i] and mistakes_printed_already < 3: # only print up to 5 mistakes to get a sense\n",
+    "            if (\n",
+    "                not correct[i] and mistakes_printed_already < 3\n",
+    "            ):  # only print up to 5 mistakes to get a sense\n",
     "                mistakes_printed_already += 1\n",
-    "                print(\"GPT claims that %s sorted is %s but gt is %s\" % (inp[i].tolist(), sol_candidate[i].tolist(), sol[i].tolist()))\n",
-    "        if max_batches is not None and b+1 >= max_batches:\n",
+    "                print(\n",
+    "                    \"GPT claims that %s sorted is %s but gt is %s\"\n",
+    "                    % (inp[i].tolist(), sol_candidate[i].tolist(), sol[i].tolist())\n",
+    "                )\n",
+    "        if max_batches is not None and b + 1 >= max_batches:\n",
     "            break\n",
     "    rt = torch.tensor(results, dtype=torch.float)\n",
-    "    print(\"%s final score: %d/%d = %.2f%% correct\" % (split, rt.sum(), len(results), 100*rt.mean()))\n",
+    "    print(\n",
+    "        \"%s final score: %d/%d = %.2f%% correct\"\n",
+    "        % (split, rt.sum(), len(results), 100 * rt.mean())\n",
+    "    )\n",
     "    return rt.sum()\n",
+    "\n",
     "\n",
     "# run a lot of examples from both train and test through the model and verify the output correctness\n",
     "with torch.no_grad():\n",
-    "    train_score = eval_split(trainer, 'train', max_batches=50)\n",
-    "    test_score  = eval_split(trainer, 'test',  max_batches=50)"
+    "    train_score = eval_split(trainer, \"train\", max_batches=50)\n",
+    "    test_score = eval_split(trainer, \"test\", max_batches=50)"
    ]
   },
   {
@@ -287,17 +310,17 @@
    ],
    "source": [
     "# let's run a random given sequence through the model as well\n",
-    "n = train_dataset.length # naugy direct access shrug\n",
+    "n = train_dataset.length  # naugy direct access shrug\n",
     "inp = torch.tensor([[0, 0, 2, 1, 0, 1]], dtype=torch.long).to(trainer.device)\n",
     "assert inp[0].nelement() == n\n",
     "with torch.no_grad():\n",
     "    cat = model.generate(inp, n, do_sample=False)\n",
     "sol = torch.sort(inp[0])[0]\n",
     "sol_candidate = cat[:, n:]\n",
-    "print('input sequence  :', inp.tolist())\n",
-    "print('predicted sorted:', sol_candidate.tolist())\n",
-    "print('gt sort         :', sol.tolist())\n",
-    "print('matches         :', bool((sol == sol_candidate).all()))"
+    "print(\"input sequence  :\", inp.tolist())\n",
+    "print(\"predicted sorted:\", sol_candidate.tolist())\n",
+    "print(\"gt sort         :\", sol.tolist())\n",
+    "print(\"matches         :\", bool((sol == sol_candidate).all()))"
    ]
   }
  ],
@@ -317,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4,
   "vscode": {
