--- a/generate.ipynb
+++ b/generate.ipynb
@@ -18,31 +18,61 @@
     "from mingpt.model import GPT\n",
     "from mingpt.utils import set_seed\n",
     "from mingpt.bpe import BPETokenizer\n",
+    "\n",
     "set_seed(3407)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_mingpt = True # use minGPT or huggingface/transformers model?\n",
-    "model_type = 'gpt2-xl'\n",
-    "device = 'cuda'"
+    "use_mingpt = False  # use minGPT or huggingface/transformers model?\n",
+    "model_type = \"gpt2-xl\"\n",
+    "device = \"mps\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of parameters: 1557.61M\n"
-     ]
+     "data": {
+      "text/plain": [
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(50257, 1600)\n",
+       "    (wpe): Embedding(1024, 1600)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-47): 48 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((1600,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2SdpaAttention(\n",
+       "          (c_attn): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((1600,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D()\n",
+       "          (c_proj): Conv1D()\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((1600,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=1600, out_features=50257, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -50,89 +80,166 @@
     "    model = GPT.from_pretrained(model_type)\n",
     "else:\n",
     "    model = GPT2LMHeadModel.from_pretrained(model_type)\n",
-    "    model.config.pad_token_id = model.config.eos_token_id # suppress a warning\n",
+    "    model.config.pad_token_id = model.config.eos_token_id  # suppress a warning\n",
     "\n",
     "# ship model to device and set to eval mode\n",
     "model.to(device)\n",
-    "model.eval();"
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate(prompt=\"\", num_samples=10, steps=20, do_sample=True):\n",
     "\n",
-    "def generate(prompt='', num_samples=10, steps=20, do_sample=True):\n",
-    "        \n",
     "    # tokenize the input prompt into integer input sequence\n",
     "    if use_mingpt:\n",
     "        tokenizer = BPETokenizer()\n",
-    "        if prompt == '':\n",
+    "        if prompt == \"\":\n",
     "            # to create unconditional samples...\n",
     "            # manually create a tensor with only the special <|endoftext|> token\n",
     "            # similar to what openai's code does here https://github.com/openai/gpt-2/blob/master/src/generate_unconditional_samples.py\n",
-    "            x = torch.tensor([[tokenizer.encoder.encoder['<|endoftext|>']]], dtype=torch.long)\n",
+    "            x = torch.tensor(\n",
+    "                [[tokenizer.encoder.encoder[\"<|endoftext|>\"]]], dtype=torch.long\n",
+    "            )\n",
     "        else:\n",
     "            x = tokenizer(prompt).to(device)\n",
     "    else:\n",
     "        tokenizer = GPT2Tokenizer.from_pretrained(model_type)\n",
-    "        if prompt == '': \n",
+    "        if prompt == \"\":\n",
     "            # to create unconditional samples...\n",
     "            # huggingface/transformers tokenizer special cases these strings\n",
-    "            prompt = '<|endoftext|>'\n",
-    "        encoded_input = tokenizer(prompt, return_tensors='pt').to(device)\n",
-    "        x = encoded_input['input_ids']\n",
-    "    \n",
+    "            prompt = \"<|endoftext|>\"\n",
+    "        encoded_input = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "        x = encoded_input[\"input_ids\"]\n",
+    "\n",
     "    # we'll process all desired num_samples in a batch, so expand out the batch dim\n",
     "    x = x.expand(num_samples, -1)\n",
     "\n",
     "    # forward the model `steps` times to get samples, in a batch\n",
     "    y = model.generate(x, max_new_tokens=steps, do_sample=do_sample, top_k=40)\n",
-    "    \n",
+    "\n",
     "    for i in range(num_samples):\n",
     "        out = tokenizer.decode(y[i].cpu().squeeze())\n",
-    "        print('-'*80)\n",
-    "        print(out)\n",
-    "        "
+    "        print(\"-\" * 80)\n",
+    "        print(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f38ceab9cfe40ce97a718673e547f1d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/26.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d282734e73df4bb286f4b19928685a2e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6cb508b7a20944708f2b164c1d3264ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9cefc54c850449dae861f440faa0b91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/mingpt/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the chief of the criminal investigation department, said during a news conference, \"We still have a lot of\n",
+      "The Turing's Research Engineering Team are also interested in developing the algorithm of a new type of Turing machine, an artificial general intelligence. They\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the man whom most of America believes is the architect of the current financial crisis. He runs the National Council\n",
+      "The Turing's Research Engineering Team are working with Dr. Jeroen Bosch (University College Dublin) to make the Turing's T\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the head of the Department for Regional Reform of Bulgaria and an MP in the centre-right GERB party\n",
+      "The Turing's Research Engineering Team are pleased to announce the release of the Turing's Research Software Release 11 (SRX11). The release\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the former head of the World Bank's IMF department, who worked closely with the IMF. The IMF had\n",
+      "The Turing's Research Engineering Team are currently creating the first robot to enter an Olympic competition.\n",
+      "\n",
+      "\n",
+      "A spokesperson for the team told The\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the vice president for innovation and research at Citi who oversaw the team's work to make sense of the\n",
+      "The Turing's Research Engineering Team are developing innovative solutions to address these concerns. In partnership with Intel, they have started building an advanced machine\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the CEO of OOAK Research, said that the latest poll indicates that it won't take much to\n",
+      "The Turing's Research Engineering Team are located at the Computational Science & Engineering Center (CSE) at Johns Hopkins University.\n",
+      "\n",
+      "\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the former prime minister of Estonia was at the helm of a three-party coalition when parliament met earlier this\n",
+      "The Turing's Research Engineering Team are the team responsible for developing these technologies, and we have an opportunity to make a big difference in the\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the director of the Institute of Economic and Social Research, said if the rate of return is only 5 per\n",
+      "The Turing's Research Engineering Team are pleased to announce the first public release of the TensorFlow RDD library. We aim to make\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the minister of commerce for Latvia's western neighbour: \"The deal means that our two countries have reached more\n",
+      "The Turing's Research Engineering Team are looking for the following:\n",
+      "\n",
+      "Software Engineer - Java\n",
+      "\n",
+      "Development Engineer - Java\n",
+      "\n",
+      "System\n",
       "--------------------------------------------------------------------------------\n",
-      "Andrej Karpathy, the state's environmental protection commissioner. \"That's why we have to keep these systems in place.\"\n",
-      "\n"
+      "The Turing's Research Engineering Team are extremely pleased that the work they have done has yielded such significant improvements but I must stress that there remains\n"
      ]
     }
    ],
    "source": [
-    "generate(prompt='Andrej Karpathy, the', num_samples=10, steps=20)"
+    "generate(prompt=\"The Turing's Research Engineering Team are\", num_samples=10, steps=20)"
    ]
   }
  ],
@@ -152,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4,
   "vscode": {
